# shopping-agent

./: .env  README.md  connection.py  pyproject.toml
.chainlit/: config.toml
src/shoping_agent/: __init__.py  main.py
